--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="http://127.0.0.1:8000/" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <title>Django REST with React</title>
 </head>
 <body>
 <div id="root">
     <!-- React will load here -->
 </div>
+</body>
 {% load static %}
 <script src="{% static "frontend/main.js" %}"></script>
-</body>
 </html>
